--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -59,6 +59,18 @@ body {
 	background: #FFFEF8;
 	box-sizing: border-box;
 }
+/* Banner édition*/
+.edit{
+	justify-content: center;
+	align-items: center;
+	height: 60px;
+	background-color: #000;
+	color: #fff;
+	font-size: 16px;
+	gap: 10px;
+	margin: 0 -150px;
+	display:none
+}
 header {
 	display: flex;
 	justify-content: space-between;
@@ -143,11 +155,105 @@ font-weight: 700;
 	margin-right: 146px;
 }
 #portfolio h2 {
-	text-align: center;
 	margin-bottom: 2em;
+}
+.edit-modif{
+	display: flex;
+	justify-content: center;
+	gap:20px;
 
 }
-/* Filtres par Ctégories*/
+.modif{
+	display: flex;
+	position: relative;
+	gap:5px;
+	top:10px;
+	display: none
+}
+.modif p{
+	cursor: pointer;
+}
+/******MODALE***/
+.modal-container{
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.3);
+	width: 100%; 
+	height: 100%;
+	display: none;
+	justify-content: center;
+	align-items: center;
+	z-index: 1;
+	cursor: pointer;
+}
+.modal-wrapper{
+	background-color: #fff;
+	width: 600px;
+	max-width: 100vw;
+	overflow: auto;
+	padding:20px;
+	position: relative;
+	border-radius: 10px;
+}
+.fa-xmark{
+	position:absolute;
+	right:20px;
+	font-size: 24px;
+	cursor: pointer;
+}
+.modal-wrapper h3{
+	font-size: 26px;
+	margin:2em 0;
+	text-align: center;
+}
+.gallery-modal{
+	display: grid;
+	grid-template-columns: repeat(5,1fr);
+	margin:0 80px;
+	column-gap: 10px;
+	row-gap: 25px;
+}
+.gallery-modal figure{
+	position: relative;
+}
+.gallery-modal span{
+	width: 17px;
+	height: 17px;
+	background-color: #000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top:5px;
+	right: 5px;
+}
+.fa-trash-can{
+	color: #fff;
+	font-size: 10px;
+}
+.gallery-modal img{
+	width:100%;
+}
+hr{
+	margin:60px 80px 0px 80px;
+}
+.modal-wrapper button{
+	font-family: 'Syne';
+	font-weight: 700;
+	color: white;
+	background-color: #1D6154;
+	width: 240px;
+	border-radius: 60px ;
+	height:36px;
+	border:none;
+	display:block;
+	margin: 30px auto;
+	font-family: Syne;
+	font-weight: 700;
+}
+
+/* Filtres par Catégories*/
 #portfolio ul{
 	display: flex;
 	justify-content: center;
@@ -168,7 +274,8 @@ font-weight: 700;
 	background-color: #1D6154;
 	color: #fff;
 }
-.gallery {
+
+.gallery{
 	width: 100%;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
