--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -269,6 +269,7 @@ hr{
 	border: 1px solid #1D6154;
 	padding: 10px 20px;
 	border-radius: 60px;
+	cursor: pointer;
 }
 #portfolio li:hover{
 	background-color: #1D6154;
@@ -332,7 +333,8 @@ hr{
 	width: 180px;
 	text-align: center;
 	border-radius: 60px ;
-	height:36px;	
+	height:36px;
+	cursor: pointer;	
 }
 footer{
 	background-color: #fff;
