--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -187,7 +187,7 @@ font-weight: 700;
 	z-index: 1;
 	cursor: pointer;
 }
-.modal-wrapper{
+.list_gallery, .upload_gallery{
 	background-color: #fff;
 	width: 600px;
 	max-width: 100vw;
@@ -202,7 +202,7 @@ font-weight: 700;
 	font-size: 24px;
 	cursor: pointer;
 }
-.modal-wrapper h3{
+.list_gallery h3, .upload_gallery h3{
 	font-size: 26px;
 	margin:2em 0;
 	text-align: center;
@@ -236,21 +236,57 @@ font-weight: 700;
 	width:100%;
 }
 hr{
-	margin:60px 80px 0px 80px;
+	margin: 60px 80px 30px 80px
 }
-.modal-wrapper button{
-	font-family: 'Syne';
-	font-weight: 700;
-	color: white;
-	background-color: #1D6154;
+.list_gallery button{
 	width: 240px;
-	border-radius: 60px ;
-	height:36px;
-	border:none;
-	display:block;
-	margin: 30px auto;
-	font-family: Syne;
-	font-weight: 700;
+	border: none;
+	display: block;
+}
+.fa-arrow-left{
+	font-size: 21px;
+}
+
+.add_gallery{
+	background-color: #E8F1F6;
+	height: 170px;
+	border-radius: 5px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding:10px;
+}
+.add_gallery input{
+	display:none;
+}
+.fa-image{
+	font-size: 76px;
+	color: #B9C5CC;
+}
+.add_gallery label{
+	margin:0.5em 0.5em;
+	width: 173px;
+	background-color: #CBD6DC;
+	text-align: center;
+	border-radius: 50px;
+	font-weight: 500;
+	color: #306685;
+	padding:10px
+}
+.add_gallery p{
+	font-size: 10px;
+	color: #444444;
+}
+ .upload_gallery input[type="submit"]{
+	width:237px;
+	background-color: #A7A7A7;
+}
+.upload_gallery form{
+	margin: 0 80px ;
+}
+.upload_gallery hr{
+	margin: 60px 0 0 0;
 }
 
 /* Filtres par Catégories*/
@@ -295,36 +331,36 @@ hr{
 	width: 50%;
 	margin: auto;
 }
-#contact > * {
+#contact{
 	text-align: center;
 }
-#contact h2{
+#contact h2,#login h2{
 	margin-bottom: 20px;
 }
-#contact p{
+#contact p, #login p{
 	color:#3D3D3D
 }
-#contact form {
+form {
 	text-align: left;
 	margin-top:30px;
 	display: flex;
 	flex-direction: column;
 	color:#3D3D3D
 }
-#contact input {
+input,select{
 	height: 50px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact label {
+label{
 	margin: 2em 0 1em 0;
 }
 #contact textarea {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact input[type="submit"]{
+input[type="submit"],button{
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
@@ -358,43 +394,11 @@ footer li{
 	width: 33%;
 	margin: auto;
 }
-#login > * {
-	text-align: center;
-}
-#login h2{
-	margin-bottom: 20px;
-}
-#login p{
-	color:#3D3D3D
-}
+
 #login form {
-	text-align: left;
-	margin-top:30px;
-	display: flex;
-	flex-direction: column;
-	color:#3D3D3D;
 	margin-bottom: 175px;
 }
-#login input {
-	height: 50px;
-	font-size: 1.2em;
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-}
-#login label {
-	margin: 2em 0 1em 0;
-}
-#login input[type="submit"]{
-	font-family: 'Syne';
-	font-weight: 700;
-	color: white;
-	background-color: #1D6154;
-	margin : 2em auto ;
-	width: 180px;
-	text-align: center;
-	border-radius: 60px ;
-	height:36px;
-}	
+
 #login a{
 	text-decoration:underline;
 	text-align: center;
