--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -259,7 +259,6 @@ hr{
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	padding:10px;
 }
 .add_gallery input{
 	display:none;
@@ -282,6 +281,11 @@ hr{
 .add_gallery p{
 	font-size: 10px;
 	color: #444444;
+}
+.add_gallery img{
+	width:100%;
+	height: 100%;
+	object-fit: cover;
 }
  .upload_gallery input[type="submit"]{
 	width:237px;
